updated images and site title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>title &#124; title</title>
         <meta name="description" content="Description here">
-		<meta name="author" content="Stepladder Communications">
+		<meta name="author" content="Barry Richards">
 		<meta http-equiv="cleartype" content="on">
 		<meta name="pinterest" content="nopin" />
 		
