--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <object id="outline__content" type="image/svg+xml" data="img/content/outline-content.svg"></object>
             </div>
             <div class="panel-background --bg-web">
-              <object id="outline__phone" type="image/svg+xml" data="img/content/outline-web.svg"></object>
+              <object id="outline__phone" type="image/svg+xml" data="img/content/outline-phone.svg"></object>
             </div>
             <div class="panel-background --bg-seo">
             </div>
