updated menu items

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     <a class="nav__nav-item" href="#">Content Writing</a>
                     <a class="nav__nav-item" href="#">Web Design</a>
                     <a class="nav__nav-item" href="#">SEO</a>
+                    <a class="nav__nav-item" href="#">Contact</a>
         					</nav>
                 </div>
               </div>
@@ -132,6 +133,7 @@
                       <a class="cta-button --content" id="trigger--content" href="#">Content &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                       <a class="cta-button --web" id="trigger--web" href="#">Web Design &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                       <a class="cta-button --seo" id="trigger--seo" href="#">SEO &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                      <!--<a class="cta-button --all" id="trigger--seo" href="#">Whole Package &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>-->
                     </div>
                     
                   </div>               
