--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     
 		
 		
-		<!--FONT LINKAGE -->
-    <script type="text/javascript" src="//fast.fonts.net/jsapi/9cba27df-7a15-4cdc-9cd6-d85b7567ccde.js"></script>
+		<!--FONT LINKAGE 
+    <script type="text/javascript" src="//fast.fonts.net/jsapi/9cba27df-7a15-4cdc-9cd6-d85b7567ccde.js"></script>-->
     
 		<!-- Stylesheet -->
 		<link rel="stylesheet" href="css/main.css">
